Fix the hovering and align text.

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ h4 {
 .nav-center img {
     width: 50px;
     border: 2px solid white;
-    transform: translateY(clamp(26px, calc(40px - 2vw), 40px));
+    transform: translateY(clamp(26px, calc(40px - 2vw), 45px));
 }
 
 .face-change img.base {
@@ -155,13 +155,13 @@ h4 {
 .nav-center img.hover,
 .face-change img.hover {
     opacity: 0;
-    animation: glowPulse 1s infinite alternate;
-    transition: opacity 0.4s ease;
+    transition: opacity 0.3s ease;
 }
 
 .nav-center:hover img.hover,
 .face-change:hover img.hover {
     opacity: 1;
+    animation: glowPulse 1s infinite alternate;
 }
 
 .nav-center:hover img.base,
@@ -193,16 +193,20 @@ h4 {
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.nav-center img:hover+.tooltip {
+    opacity: 1;
     animation: tooltipPulse 1s infinite alternate;
 }
 
 @keyframes tooltipPulse {
     0% {
-        transform: translateX(-50%) translateY(0);
+        transform: translateX(-50%) translateY(-5px);
     }
 
     100% {
-        transform: translateX(-50%) translateY(-5px);
+        transform: translateX(-50%) translateY(0);
     }
 }
 
@@ -225,10 +229,6 @@ h4 {
 
 .face-change .tooltip::after {
     content: attr(data-default);
-}
-
-.nav-center img:hover+.tooltip {
-    opacity: 1;
 }
 
 .nav-link {
@@ -361,10 +361,6 @@ h4 {
         flex-direction: column;
         gap: 20px
     }
-
-    /* .nav-center img {
-        top: 35px;
-    } */
 }
 
 .video-container {
@@ -440,7 +436,7 @@ h4 {
 
 .contact-info p {
     margin: 0.2rem 0;
-    text-align: left;
+    text-align: right;
 }
 
 .social-links {
